<resources>
    <string name="app_name">Golden Words Guess</string>

    <!-- Jin Yan-->
    <string name="title">Choose Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Normal</string>
    <string name="hard">Expert</string>
    <string name="htp1">How to play</string>
    <string name="htp2">Select a difficulty! 1* is the easiest, while 3* is the most advanced.</string>
    <string name="htp3">Select one of the eight themes available to start your game.</string>
    <string name="htp4">To complete the game, gather all the green ticks by spelling the correct word.</string>
    <string name="htp5">A wrong option will be denoted by a red cross. Good luck and have fun!</string>
    <string name="homePage">Home Page</string>
    <string name="back">Back</string>
    <string name="start">Start!</string>
    <string name="eng1">English 1</string>
    <string name="eng2">English 2</string>
    <string name="eng3">English 3</string>
    <string name="chinese1">Chinese 1</string>
    <string name="chinese2">Chinese 2</string>
    <string name="chinese3">Chinese 3</string>
    <string name="Malay1">Malay 1</string>
    <string name="Malay2">Malay 2</string>
    <string name="Malay3">Malay 3</string>
    <string name="Tamil1">Tamil 1</string>
    <string name="Tamil2">Tamil 2</string>
    <string name="Tamil3">Tamil 3</string>
    <string name="chooseLevel">Choose a level!</string>





</resources>