<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_weight="0.15"
        android:background="@color/red"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            app:srcCompat="@drawable/star" />
    </LinearLayout>




    <!-- First Row -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewFlask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/flask" />

                <ImageView
                    android:id="@+id/imageViewLaksa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="70dp"
                    android:src="@drawable/laksa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textViewFlask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_weight="0"
                    android:text="@string/eng1"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textViewLaska"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:layout_marginLeft="50dp"
                    android:text="@string/eng2"
                    android:textSize="28sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFlask"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/btnLaska"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewRose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/rose" />

                <ImageView
                    android:id="@+id/imageViewDogs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/dog" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="0"
                    android:text="@string/eng3"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textViewDog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:layout_marginLeft="50dp"
                    android:text="@string/chinese1"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRose"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/btnDog"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewClogs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/chinese2" />

                <ImageView
                    android:id="@+id/imageViewSpoons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="70dp"
                    android:src="@drawable/spoon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewclogs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="0"
                    android:text="@string/Chinese3"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textViewspoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Malay1"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClogs"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/btnSpoon"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewArmchair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/armchair" />

                <ImageView
                    android:id="@+id/imageViewBirdCage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/birdcage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewArmChair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="70dp"
                    android:layout_weight="0"
                    android:text="@string/Malay2"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textViewBirdCage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0"
                    android:text="@string/Malay3"
                    android:textSize="28sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnArmchair"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/btnBirdCage"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:text="@string/start"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/buttonHomePage"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/orange_btn"
        android:text="@string/homePage"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@null" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.1"
        android:background="@color/bgPurple" />
</LinearLayout>